# Learning_AI_Agent

./: .gitignore  README.md  proj_architecture.txt
backend/: README.md  alembic.ini  db.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_pgvector_embedding.py  README
backend/app/: __init__.py  config.py  database.py
backend/app/core/: __init__.py  security.py
backend/app/models/: __init__.py  concept.py  daily_study_plan.py  document.py  learning_path.py  question.py  user.py
backend/app/routers/: auth.py  chunks.py  documents.py  learning_paths.py  questions.py  youtube.py
backend/app/schemas/: __init__.py  auth.py  chunk.py  document.py  question.py
backend/app/services/: __init__.py  chunking.py  concept_service.py  document_processing_service.py  embedding_service.py  llm_service.py  question_service.py  roadmap_service.py  text_extraction.py  vector_store.py  youtube_service.py
backend/core/: config.py
frontend/: index.html
frontend/src/: App.css  App.tsx  AuthContext.tsx  Layout.tsx  ProtectedRoute.tsx  ThemeContext.tsx  api.ts  index.css
frontend/src/pages/: CreatePathPage.tsx  DashboardPage.tsx  DocumentListPage.tsx  HomePage.tsx  LoginPage.tsx  PathDetailPage.tsx  PathsListPage.tsx  QuizPage.tsx  SignupPage.tsx  UploadPage.tsx
