[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.0",
    "youtube-transcript-api>=0.6.0",
    "tiktoken>=0.8.0",
    "requests>=2.32.0",
    "chromadb>=1.5.2",
]
