[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.0",
    "youtube-transcript-api>=0.6.0",
    "tiktoken>=0.8.0",
    "chromadb>=1.5.2",
    "sqlalchemy>=2.0.48",
    "python-multipart>=0.0.22",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic[email]>=2.12.5",
    "pypdf>=6.8.0",
    "python-docx>=1.2.0",
]
